# Cpp-Grader

Grader/: Cargo.toml  app.py  app.rs  main.rs  requirements.txt  start.sh
Grader/problems/problem1/: input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  meta.json  output1.txt  output10.txt  output3.txt  output4.txt  output5.txt  output7.txt  output8.txt  output9.txt
Grader/static/: script.js  style.css
Grader/templates/: home.html  problem.html
