[package]
name = "submission_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1.20.1"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
wait-timeout = "0.2"
lazy_static = "1.5"
tempfile = "3"

[[bin]]
name = "submission_server"
path = "main.rs"


