[package]
name = "submission_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
sysinfo = "0.29"
wait-timeout = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
once_cell = "1.21"
tempfile = "3.23"
actix-files = "0.6"
lazy_static = "1.5"

[[bin]]
name = "submission_server"
path = "main.rs"

