[package]
name = "submission_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "submission_server"
path = "main.rs"

[dependencies]
actix-web = "4.11"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.1"
once_cell = "1.19"
tempfile = "3.10"
futures-util = "0.3"
lazy_static = "1.5"
sysinfo = "0.29"
wait-timeout = "0.2"
